Fix(web, web-react): Make individual items in vertical `Flex` reflect `alignmentX` #DS-1820
Previously, items in vertical `Flex` layouts were only aligned horizontally (`alignmentX`)
as a whole block. Individual items matched the width of the largest item.

With this update, individual items in vertical `Flex` layouts also reflect the value of
`alignmentX`.

--- a/packages/web/src/scss/components/Flex/_Flex.scss
+++ b/packages/web/src/scss/components/Flex/_Flex.scss
@@ -74,6 +74,10 @@
             $class-name: 'Flex',
             $dictionary-values: theme.$alignment-x-dictionary,
             $axis: 'x',
+            $properties: (
+                'justify-content',
+                'justify-items',
+            ),
             $infix: $infix
         );
         @include dictionaries.generate-alignments(
